[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srvwatch"
version = "0.1.0"
description = "Real-time terminal health dashboard for remote servers via SSH"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0",
]

[project.scripts]
srvwatch = "srvwatch.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["srvwatch*"]